kube/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecounter-client
  namespace: kubecounter
  labels:
    app.kubernetes.io/name: kubecounter
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubecounter
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubecounter
        app.kubernetes.io/component: frontend
    
    spec:
      containers:
        - name: kubecounter-client
          image: mmaous/kubecounter:client
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
