kube/frontend/ingress.yaml
# kubecounter-ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecounter-ingress-frontend
  namespace: kubecounter
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubecounter-client
                port:
                  number: 80
